--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "Inter", sans-serif;
+  }
+}
+
+@layer components {
+  .item-background {
+    @apply rounded-sm bg-base-300/50 text-primary;
+  }
+  .active-navbar-item {
+    @apply underline text-primary;
+  }
+}
